--- a/App/Represent/wear/src/main/AndroidManifest.xml
+++ b/App/Represent/wear/src/main/AndroidManifest.xml
@@ -11,20 +11,24 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
         <activity
-            android:name=".MyStubBroadcastActivity"
-            android:label="MyStubBroadcastActivity">
+            android:name=".DisplaySenatorActivity"
+            android:label="DisplaySenatorActivity"
+            android:allowEmbedded="true"
+            android:exported="true"
+            android:taskAffinity=""
+            android:theme="@android:style/Theme.DeviceDefault.Light">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
         <activity
-            android:name=".DisplaySenatorActivity"
-            android:allowEmbedded="true"
-            android:exported="true"
-            android:taskAffinity=""
-            android:theme="@android:style/Theme.DeviceDefault.Light"></activity>
+            android:name=".MyStubBroadcastActivity"
+            android:label="MyStubBroadcastActivity"></activity>
 
         <receiver
             android:name=".MyPostNotificationReceiver"
