--- a/App/Represent/mobile/src/main/AndroidManifest.xml
+++ b/App/Represent/mobile/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:theme="@style/AppTheme"
         android:supportsRtl="true">
         <activity android:name=".SetLocationActivity"
+            android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +18,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListRepresentativesActivity"></activity>
+        <service android:name=".PhoneToWatchService" />
+        <!-- Listeners are special services that need to be declared like below, as BIND_LISTENER -->
+        <service android:name=".PhoneListenerService"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
