--- a/App/Represent/wear/src/main/AndroidManifest.xml
+++ b/App/Represent/wear/src/main/AndroidManifest.xml
@@ -25,18 +25,15 @@
             </intent-filter>
 
         </activity>
-
-        <activity
-            android:name=".MyStubBroadcastActivity"
-            android:label="MyStubBroadcastActivity"></activity>
-
-        <receiver
-            android:name=".MyPostNotificationReceiver"
-            android:exported="true">
+        <service android:name=".WatchToPhoneService" />
+        <!-- Listeners are special services that need to be declared like below, as BIND_LISTENER -->
+        <service android:name=".WatchListenerService"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="com.jgraycar.represent.SHOW_NOTIFICATION" />
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
-        </receiver>
+        </service>
+
     </application>
 
 </manifest>
